'Visible navigation bar at the main screen' bug fixed and some related code optimized.

--- a/web/css/mp.css
+++ b/web/css/mp.css
@@ -73,11 +73,6 @@ div {
 
 }
 
-.mp_hidden .mp_title_bar {
-    visibility: hidden;
-    height: 0px !important;
-}
-
 .mp_bar_title {
     padding-top: 10px;
     text-align: center;
